--- a/src/components/utilities/loader.styles.scss
+++ b/src/components/utilities/loader.styles.scss
@@ -1,8 +1,9 @@
 .loader {
-    background: rgba(255,255,255,.7);
+    background: rgba(255,255,255,1);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    position:absolute;
 }
