--- a/src/components/utilities/loader.styles.scss
+++ b/src/components/utilities/loader.styles.scss
@@ -5,5 +5,7 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    position:absolute;
+    position:fixed;
+    top: 0;
+    left: 0;
 }
