--- a/src/components/utilities/loader.styles.scss
+++ b/src/components/utilities/loader.styles.scss
@@ -8,4 +8,13 @@
     position:fixed;
     top: 0;
     left: 0;
+
+    .sr-only {
+        position:absolute;
+        left:-10000px;
+        top:auto;
+        width:1px;
+        height:1px;
+        overflow:hidden;
+    }
 }
